# cflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cflow/: CFLOW.py  CFLOW_Agent_Dec.py  __init__.py
src/cflow/examples/: CFLOW_Examples.py  CFLOW_decorator_example.py  CFLOW_parallel.py  CFLOW_parallel_example.py  tool_dec.py
src/cflow/rules/: CFLOW_Rules.md
